# lcel-teacher

./: README.md  code_langchain.py  eval.csv  eval_code_langchain.ipynb  pyproject.toml
.github/workflows/: eval.yml
app/: base_rag_chain.py  base_rag_chain_code_parser.py  chain.py  context_stuffing_0125_chain_code_parser.py  context_stuffing_0125_chain_code_parser_prompt.py  context_stuffing_chain.py  deploy_chain.py  multi_query_chain.py  prompts.py  server.py
app/test_chains/: base_rag_chain.py  context_stuffing_0125_chain.py  context_stuffing_0125_chain_codefxn_parser_prompt.py  context_stuffing_chain.py  context_stuffing_chain_code_parser.py  langgraph.py  multi_query_chain.py  multi_query_chain_code_parser.py
eval/: build_eval_set.ipynb  create_dataset.py  eval.csv  eval_code_langchain.ipynb  eval_lcel_teacher.ipynb  run_eval.py  test_chain.py
ntbk/: lcel-teacher-langgraph.ipynb
tests/evals/: test_chain.py
