[tool.poetry]
name = "code-langchain-app"
version = "0.1.0"
description = ""
authors = ["Lance Martin <lance@langchain.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.22"}
weaviate-client = "^3.26.0"
langchainhub = "^0.1.14"
jupyter = "^1.0.0"
openai = "^1.6.0"
langchain = "~0.1.0"
pandas = "^2.1.4"
tiktoken = "^0.5.2"
scikit-learn = "^1.4.0"
langchain-openai = "^0.0.4"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"